--- a/card_evaluator.ipynb
+++ b/card_evaluator.ipynb
@@ -6,29 +6,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import rust_poker\n",
+    "import pyrust_poker # pyrust_poker\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "uint64 uint64\n",
-      "(52,) (52,)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(rust_poker.poker_hand.get_cards())\n",
+    "len(pyrust_poker.poker_hand.get_cards())\n",
     "\n",
-    "poker_keys = np.array([card.key for card in rust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
-    "poker_mask = np.array([card.mask for card in rust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
+    "poker_keys = np.array([card.key for card in pyrust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
+    "poker_mask = np.array([card.mask for card in pyrust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
     "\n",
     "print(poker_keys.dtype, poker_mask.dtype)\n",
     "print(poker_keys.shape, poker_mask.shape)"
@@ -40,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "poker_keys = np.array([card.key for card in rust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
-    "poker_mask = np.array([card.mask for card in rust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
+    "poker_keys = np.array([card.key for card in pyrust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
+    "poker_mask = np.array([card.mask for card in pyrust_poker.poker_hand.get_cards()], dtype=np.uint64)\n",
     "\n",
     "\n",
     "def get_hand_strength(hand_masks: np.array):\n",
@@ -51,11 +42,11 @@
     "  cards_sum = np.sum(keep_keys)\n",
     "  cards_mask = np.bitwise_or.reduce(keep_mask)\n",
     "  \n",
-    "  hand = rust_poker.poker_hand.Hand()\n",
+    "  hand = pyrust_poker.poker_hand.Hand()\n",
     "  hand.key += cards_sum\n",
     "  hand.mask += cards_mask\n",
     "  \n",
-    "  return rust_poker.evaluate(hand)\n",
+    "  return pyrust_poker.evaluate(hand)\n",
     "  "
    ]
   },
@@ -69,7 +60,7 @@
     "  keep_keys = np.multiply(poker_keys, hand_masks).astype(np.uint64)\n",
     "  keep_mask = np.multiply(poker_mask, hand_masks).astype(np.uint64)\n",
     "  \n",
-    "  hand = rust_poker.poker_hand.Hand()\n",
+    "  hand = pyrust_poker.poker_hand.Hand()\n",
     "  \n",
     "  all_cards_sum = hand.key + np.sum(keep_keys, axis=1)\n",
     "  all_cards_mask = np.bitwise_or.reduce(keep_mask, axis=1)\n",
@@ -81,27 +72,16 @@
     "    hand.key = all_cards_sum\n",
     "    hand.mask = all_cards_mask\n",
     "    \n",
-    "    results[index] = rust_poker.evaluate(hand)\n",
+    "    results[index] = pyrust_poker.evaluate(hand)\n",
     "      \n",
     "  return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([36865., 36874.])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "keep_cards_mask = np.zeros(shape=(2, 52), dtype=np.uint64)\n",
     "\n",
@@ -113,17 +93,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "evaluations_per_second 389999.6243480486\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
@@ -155,49 +127,30 @@
     "  keep_keys = np.multiply(poker_keys, hand_masks).astype(np.uint64)\n",
     "  keep_mask = np.multiply(poker_mask, hand_masks).astype(np.uint64)\n",
     "  \n",
-    "  hand = rust_poker.poker_hand.Hand()\n",
+    "  hand = pyrust_poker.poker_hand.Hand()\n",
     "  \n",
     "  all_cards_sum = hand.key + np.sum(keep_keys, axis=1)\n",
     "  all_cards_mask = np.bitwise_or.reduce(keep_mask, axis=1)\n",
     "  \n",
     "  eval_list = list(zip(all_cards_sum, all_cards_mask))\n",
     "  \n",
-    "  return rust_poker.evaluate_list(eval_list)"
+    "  return pyrust_poker.evaluate_list(eval_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[36865, 36865, 36865]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "get_hand_strength_matrix(keep_cards_mask[:3])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "evaluations_per_second 1053761.5341655905\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "\n",
