Add python code for finding stengths

--- a/card_evaluator.ipynb
+++ b/card_evaluator.ipynb
@@ -6,15 +6,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyrust_poker # pyrust_poker\n",
+    "import pyrust_poker\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "uint64 uint64\n",
+      "(52,) (52,)\n"
+     ]
+    }
+   ],
    "source": [
     "len(pyrust_poker.poker_hand.get_cards())\n",
     "\n",
@@ -27,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +88,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([36865., 36874.])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "keep_cards_mask = np.zeros(shape=(2, 52), dtype=np.uint64)\n",
     "\n",
@@ -95,7 +115,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "evaluations_per_second 374823.31453663035\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -119,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[36865, 36865, 36865]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "get_hand_strength_matrix(keep_cards_mask[:3])"
    ]
@@ -150,7 +189,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "evaluations_per_second 874634.6152370409\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "\n",
@@ -160,18 +207,37 @@
     "keep_cards_mask[:, [0, 4, 8, 12, 48]] = 1\n",
     "\n",
     "iterations = 1_000  # Number of evaluations to test\n",
-    "start_time = time.time()\n",
-    "\n",
-    "\n",
+    "start_timer = time.time()\n",
     "\n",
     "for _ in range(iterations):\n",
     "    get_hand_strength_matrix(keep_cards_mask)\n",
     "\n",
     "end_time = time.time()\n",
-    "elapsed_time = end_time - start_time\n",
+    "elapsed_time = end_time - start_timer\n",
     "evaluations_per_second = hands_in_matrix * iterations / elapsed_time\n",
     "\n",
     "print(\"evaluations_per_second\", evaluations_per_second)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'pyrust_poker' has no attribute 'get_hand_strength_matrix'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mpyrust_poker\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_hand_strength_matrix\u001b[49m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'pyrust_poker' has no attribute 'get_hand_strength_matrix'"
+     ]
+    }
+   ],
+   "source": [
+    "pyrust_poker.get_hand_strengths"
    ]
   }
  ],
